--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@
 #canvas {
     display: block;
 }
+
+body{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw; 
+    height: 100vh; 
+    overflow: hidden
+ }
+ /* 禁止移动端下拉上滑白边及下拉刷新 */
