--- a/style.css
+++ b/style.css
@@ -14,6 +14,6 @@ body{
     left: 0;
     width: 100vw; 
     height: 100vh; 
-    overflow: hidden;
+    overflow: hidden
  }
  /* 禁止移动端下拉上滑白边及下拉刷新 */
